--- a/news_monitoring/media/temp-source/src/app/source-list/source-list.component.html
+++ b/news_monitoring/media/temp-source/src/app/source-list/source-list.component.html
@@ -69,7 +69,7 @@
   </div>
 
 
-  <!-- Modal -->
+  <!-- ADD-Modal -->
   <div
     *ngIf="showModal"
     class="fixed inset-0 flex items-start justify-center bg-black bg-opacity-40 z-50 pt-20"
