optimized fetch_story

--- a/news_monitoring/media/story/src/app/story/story.component.html
+++ b/news_monitoring/media/story/src/app/story/story.component.html
@@ -1,5 +1,5 @@
 <!-- STORY LIST -->
-<div class="story-list max-w-9xl mx-auto p-6 bg-white rounded-lg shadow-md">
+<div class="story-list max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-md">
   <div class="flex justify-between items-center mb-6">
     <h2 class="text-2xl font-bold text-gray-800">Stories</h2>
     <button
@@ -57,20 +57,23 @@
         </ng-template>
       </td>
 
-      <td class="border border-gray-300 px-4 py-2 space-x-2">
-        <button
-          (click)="fetchStory(story.id)"
-          class="bg-yellow-400 hover:bg-yellow-500 text-white px-3 py-1 rounded focus:outline-none focus:ring-2 focus:ring-yellow-300"
-        >
-          Edit
-        </button>
-        <button
-          (click)="openDeleteModal(story.id)"
-          class="bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded focus:outline-none focus:ring-2 focus:ring-red-400"
-        >
-          Delete
-        </button>
+      <td class="border border-gray-300 px-4 py-2">
+        <div class="flex space-x-2">
+          <button
+            (click)="fetchStory(story.id)"
+            class="bg-yellow-400 hover:bg-yellow-600 text-white px-3 py-1 rounded focus:outline-none focus:ring-2 focus:ring-yellow-300"
+          >
+            Edit
+          </button>
+          <button
+            (click)="openDeleteModal(story.id)"
+            class="bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded focus:outline-none focus:ring-2 focus:ring-red-400"
+          >
+            Delete
+          </button>
+        </div>
       </td>
+
     </tr>
   </tbody>
 </table>
@@ -370,7 +373,7 @@
   </div>
 </div>
 
-<div class="flex items-center justify-between mt-4">
+<div class="flex justify-center items-center gap-4 mt-4">
   <!-- Prev Button -->
   <button
     (click)="prevPage()"
@@ -379,7 +382,7 @@
   >
     Previous
   </button>
-
+  <span>Page {{ page }}</span>
   <!-- Next Button -->
   <button
     (click)="nextPage()"
@@ -389,3 +392,4 @@
     Next
   </button>
 </div>
+
