final updation done

--- a/news_monitoring/media/story/src/app/app.component.html
+++ b/news_monitoring/media/story/src/app/app.component.html
@@ -12,12 +12,13 @@
 
 
 <!-- Delete Story Modal -->
-<app-delete-story
+<!-- <app-delete-story
   *ngIf="showDeleteModal"
   [storyId]="storyToDeleteId!"
   (confirmDelete)="confirmDeleteStory()"
   (cancelDelete)="closeDeleteModal()"
 ></app-delete-story>
+ -->
 
 <!-- STORY LIST -->
 <div class="story-list max-w-5xl mx-auto p-6 bg-white rounded-lg shadow-md">
