--- a/news_monitoring/media/temp-source/src/app/add-update-source/add-update-source.component.html
+++ b/news_monitoring/media/temp-source/src/app/add-update-source/add-update-source.component.html
@@ -59,7 +59,7 @@
       <!-- Tagged Companies -->
       <div class="flex flex-wrap gap-2">
         <span
-          *ngFor="let c of sourceForm.tagged_companies; let i = index"
+          *ngFor="let c of sourceForm.tagged_companies_details; let i = index"
           class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full flex items-center"
         >
           {{ c.name }}
